test/conformance/chainsaw/mutate/e2e/simple-conditional/pod1-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: foo
  name: foo
  namespace: default
spec:
  containers:
  - image: abc:1.28
    name: busybox
    securityContext:
      runAsNonRoot: true
  securityContext:
    runAsNonRoot: true
