test/conformance/chainsaw/mutate/e2e/simple-conditional/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foo
  namespace: default
  labels:
    app: foo
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: abc:1.28
    name: busybox
