test/conformance/chainsaw/mutate/e2e/simple-conditional/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: footwo
  namespace: default
  labels:
    app: foo
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: abc:1.28
    name: busybox
  initContainers:
  - image: bcd:1.29
    name: nginx
