test/conformance/chainsaw/mutate/e2e/simple-conditional/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-runasnonroot-true
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
