test/conformance/chainsaw/mutate/e2e/simple-conditional/02-resource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource
spec:
  timeouts: {}
  try:
  - apply:
      file: pod1.yaml
  - assert:
      file: pod1-mutated.yaml
