test/conformance/chainsaw/mutate/e2e/simple-conditional/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: simple-conditional
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: set-runasnonroot-true
  - name: step-02
    try:
    - apply:
        file: pod1.yaml
    - assert:
        file: pod1-mutated.yaml
  - name: step-03
    try:
    - apply:
        file: pod2.yaml
    - assert:
        file: pod2-mutated.yaml
